<resources>
    <string name="app_name">Job Journal</string>

    <string name="menu_list">List</string>
    <string name="menu_new">New</string>
    <string name="menu_calendar">Calendar</string>

    <string name="new_record_dialog_title">Add Job Application</string>
    <string name="hint_company">Company Name</string>
    <string name="hint_position">Position</string>
    <string name="hint_phone">Phone Number (Optional)</string>
    <string name="hint_email">Email (Optional)</string>
    <string name="hint_application_date">Application Date (Optional)</string>
    <string name="hint_status">Application Status</string>
    <string name="hint_note">Additional Notes</string>
    <string name="button_submit">Save</string>

    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>

    <string name="month_day_sunday">S</string>
    <string name="month_day_monday">M</string>
    <string name="month_day_tuesday">T</string>
    <string name="month_day_wednesday">W</string>
    <string name="month_day_thursday">T</string>
    <string name="month_day_friday">F</string>
    <string name="month_day_saturday">S</string>

    <string name="calendar_application_actions_header">Actions this month</string>
    
    <string-array name="application_status_array">
        <item>Pending</item>
        <item>Accepted</item>
        <item>Rejected</item>
        <item>Canceled</item>
    </string-array>
</resources>