<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:orientation="vertical"
    tools:context=".newrecord.NewRecordDialogFragment">

    <TextView
        android:id="@+id/text_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="12dp"
        android:text="Add New Record"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_plus"
        app:layout_constraintBottom_toBottomOf="@+id/input_layout_company"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_layout_company" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_company"
        app:layout_constraintTop_toBottomOf="@+id/text_header">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_company"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/image_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_plus"
        app:layout_constraintBottom_toBottomOf="@+id/input_layout_position"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_company" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_position"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_position"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_company">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_position"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/image_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_plus"
        app:layout_constraintBottom_toBottomOf="@+id/input_layout_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_layout_phone" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_phone"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_position">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/image_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_plus"
        app:layout_constraintBottom_toBottomOf="@+id/input_layout_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_layout_address" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_address"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textWebEmailAddress|textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/image_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_plus"
        app:layout_constraintBottom_toBottomOf="@+id/input_layout_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_layout_date" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_date"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_application_date"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/image_application_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_plus"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_application_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinner_application_status" />

    <Spinner
        android:id="@+id/spinner_application_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:entries="@array/application_status_array"
        android:paddingStart="6dp"
        android:paddingTop="16dp"
        android:paddingEnd="6dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_application_status"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_date" />

    <ImageView
        android:id="@+id/image_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_plus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_layout_note" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_note"
        app:layout_constraintTop_toBottomOf="@+id/spinner_application_status">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/hint_note"
            android:inputType="textMultiLine|text"
            android:minLines="3" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_note" />

</androidx.constraintlayout.widget.ConstraintLayout>